# aws-ops-networking

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml
docs/cli-playbooks/: 01-networking.md
networking_lab/: networking_stack.py
scripts/: verify_vpc.py
